@@ -2,6 +2,7 @@
 
 	* SymmetricTransform.cs: TransformBlockで入力データにオフセットが指定されていると
 	正しく変換できないバグを修正
+	* Helper.cs: Tests/BlockCipherModeTest.csから利用するテスト用メソッドを追加
 
 2006-12-17 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
